# amplifier-recipe-dashboard

./: .gitignore  README.md  pyproject.toml
amplifier_recipe_dashboard/: auth.py  cli.py  git_tracker.py  plan_parser.py  server.py  service.py  session_scanner.py  settings.py
amplifier_recipe_dashboard/static/: app.js  style.css
amplifier_recipe_dashboard/templates/: index.html  login.html
docs/plans/: muxplex-gene-transfer-design.md
test-recipes/: child-recipe.yaml  grandchild-recipe.yaml  nested-child-recipe.yaml  parent-recipe.yaml  slow-child.yaml  slow-nested-child.yaml  slow-parent.yaml  stale-test-child.yaml  stale-test-parent.yaml
tests/: conftest.py  test_auth.py  test_server.py  test_session_scanner.py  test_settings.py
